--- a/src/component/Header.scss
+++ b/src/component/Header.scss
@@ -7,17 +7,18 @@
     background: transparent;
 
     .header-inner {
-       display: flex;
-       justify-content: space-between;
-       align-items: center;
-       display: -webkit-flex;
-       width: 100%;
+      display: flex;
+        justify-content: space-between;
+        align-items: center;
+        display: -webkit-flex;
+        width: 100%;
 
        .logo-image{
-        width: 20%;
+        width: 10%;
        }
        div {
-        flex: 1;
+         flex: 1;
+       
        }
      
        .logo-area{
@@ -27,7 +28,19 @@
             margin-left:1rem;
             margin-right: 1rem;
             display: flex;
-        align-items: center;
+            align-items: center;
+          
+
+        .location-top{
+          font-family: var(--Gilroy);
+          font-weight: 600;
+          letter-spacing: .7px;
+          margin-left: .5rem;
+          span {
+              font-family: var(--Gilroy);
+              font-weight: 400;
+          }
+        }
         }
        }
        .search-box{
@@ -39,6 +52,7 @@
           background-color: #1E1E1E;
             border-radius: 30px;
             padding: 10px;
+            width: 400px;
 
     .search-input{
         color: white;
@@ -62,17 +76,93 @@
                      margin-right: .7rem;
                      cursor: pointer;
                      text-decoration: none;
-
                  }
-
-
-       }
+           }
                  .weather-temp {
                      display: flex;
                      align-items: center;
                      justify-content: flex-end;
-                 }
 
+                     .circle{
+                        width: 35px;
+                        height:35px;
+                        background-color:white;
+                        border-radius: 50%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        margin: 0 0.5rem;   
+                        color: black; 
+                        font-family: var(--Montserrat);
+                        font-weight: 600;
+                        font-size: 1.5rem;      
+                        cursor: pointer; 
+                        
+                        &.active{
+                          background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+                            // backdrop-filter: blur(10px);
+                            color: var(--white);
+                            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+                        }
+
+                      
+                       
+                     }
+                     
+                 }
+                   .form-check {
+                       position: relative;
+
+                    .form-check-input {
+                            display: none;
+
+                            &:checked {
+                            +.form-check-label::after {
+                                  transform: translateX(28px);
+                              }
+                            }
+                     }
+                    
+
+                    .form-check-label {
+                       display: flex;
+                       justify-content: space-between;
+                       align-items: center;
+                      background: linear-gradient(135deg, rgba(73, 73, 73, 0.952), rgb(26, 26, 26));
+                        // box-shadow: 0 10px 32px 0 rgba(18, 18, 18, 0.5);
+                       padding: 5px;
+                       border-radius: 50px;
+                       color: white;
+                       width: 65px;
+                       height: 35px;
+
+                    &::after {
+                       height: 25px;
+                       width: 25px;
+                       content: "";
+                       position: absolute;
+                       border-radius: 100%;
+                       background-color: white;
+                       transition: all 0.3s ease;
+                       }
+
+                     .sun {
+                       color: orange;
+                       font-size: 2.5rem;
+                     }
+
+                     .moon {
+                        color: orange;
+                        font-size: 2.5rem;
+                     }
+    
+         
+             }
+                       
+         }
+         
+         
+        
     }
 }
 
