--- a/src/component/Weather.scss
+++ b/src/component/Weather.scss
@@ -9,8 +9,8 @@
   height: 100%;
   background-position: center center;
   background-repeat: no-repeat;
-  padding: 60px 50px 120px 50px;
-  background-color: #101014;
+  padding: 60px 0px 10px 0px;
+  // background-color: #101014;
 
   .time-date {
     color: var(--white);
@@ -18,11 +18,13 @@
 
     .time {
       font-size: 9rem;
-      font-family: var(--Poppins);
+     font-family: var(--AgudaBlackUnicase);
     }
     p{
       margin:0;
         font-size: 2rem;
+        font-family: var(--Gilroy);
+       letter-spacing: .7px;
     }
   }
 
@@ -41,100 +43,167 @@
         padding: 1.5rem;
       background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
         // backdrop-filter: blur(10px);
-        box-shadow: 0 10px 32px 0 rgba(18, 18, 18, 0.5);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         .location-name {
           font-size: 1.6rem;
-          font-family: var(--Patua);
+          font-family: var(--Gilroy);
+            font-weight: 600;
+          margin-left: 1.2rem;
+          letter-spacing: .7px;
+          span {
+              font-family: var(--Gilroy);
+              font-weight: 400;
+            }
         }
       }
 
     .weather-card-body {
         padding: 2rem 4rem;
+        // width: 700px;
         height: 250px;
+         
 
       .weather-card-info {
         display: flex;
         align-items: center;
-        justify-content: space-between;
-   
+        flex-direction: wrap;
+        justify-content: center;
+        margin: 0rem 1.4rem;
        
         div {
           flex: 1;
 
-          .deg {
-            font-size: 6rem;
-            text-align: center;
-            margin-bottom: 0;
-          }
+            .deg {
+                font-size: 6rem;
+                text-align: center;
+                margin-bottom: 0;
+                font-family: var(--AgudaBlackUnicase);
+            
+              }
+
+          .info {
+                  font-size: 1.5rem;
+                  font-family: var(--Gilroy);
+                  letter-spacing: .7px;
+                }
         }
 
         .head-icon-img {
           .icon-img {
-            width:60%;
+            width:75%;
           }
         }
       }
-    }
-
-   
+    } 
   }
-    
+ }
+
+
     .card-shadow {
       position: relative;
       padding: 3rem;
-      height: 230px;
-    }
-    .card-shadow::before {
-      content: '';
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      right: 10px;
-      bottom: 10px;
-      color: #ffff;
-      background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
-      // backdrop-filter: blur(10px);
-      box-shadow: 0 10px 32px 0 rgba(0, 0, 0, 10%);
-      z-index: -1;
-      border-radius: 5%;
+      height: 250px;
       
-      // filter: blur(15px);
-      // transform: scale(0.98);
-    }
-  
-    .icon-img{
-       display: flex;
-       align-items: center;
-       justify-content:center;
-       
-    }
-
-    .card-img-top {
-      border-radius: 10px;
-      width: 100%; /* make the image take up the full width of the card */
-    }
-    .icons{
-      width:70px;
-    }
-    .card-body {
+      &:before {
+        content: '';
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        right: 10px;
+        bottom: 10px;
+        color: #ffff;
+        background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+        box-shadow: 0 10px 32px 0 rgba(0, 0, 0, 10%);
+        z-index: -1;
+        border-radius: 15px;
+      }
+      
+      .icon-img{
+        display: flex;
+        align-items: center;
+        justify-content:center;
+        .icons{
+          width:70px;
+        }
+     }
+     .card-body {
       padding: 1rem ;
       color:white;
       display: flex;
       flex-direction: column;
       justify-content: center; /* vertically center the text */
+    .day{
+      font-family: var(--Gilroy);
+      letter-spacing: 1.5px;
+      font-size: 1.5rem;
+      font-weight: 500;
     }
-    .card-body p {
-      margin: 0; /* remove default margins */
+    .deg-feel{
+      font-family: var(--AgudaBlackUnicase);
+      letter-spacing: 1.5px;
+      font-size: 2rem;
+      margin-left: 1rem;
     }
+    .stats{
+      font-family: var(--Gilroy);
+      font-size: 1.2rem;
+      letter-spacing: 1.5px;
+    }
+    .rain-chance{
+font-family: var(--Gilroy);
+font-size: 1.4rem;
+letter-spacing: 1.5px;
+    }
+       p {
+        margin: 0; /* remove default margins */
+      }
+    }
+    .weather-highlights {
+      padding: 1rem ;
+      
+      display: flex;
+      flex-direction: column;
+      text-align: left;
+      
+      
+
+      .weather-condition-title{
+       font-size: 2rem;
+      font-family: var(--Gilroy);
+      letter-spacing: 0.9px;
+       font-weight: 400;
+       color: white;
+       
+      }
+
+      .wind-speed{
+        font-size: 4rem;
+        font-family: var(--Gilroy);
+        font-weight:400;
+        letter-spacing: 0.9px;
+        margin: 3rem 0 ;
+        
+        .km{
+           font-size: 2rem;
+        }
+       }
+
+        .speed-text{
+
+        }
+     
+    }
+ }
     
-.weather-highlights {
-  padding: 1rem ;
-  color:var(--white);
-  display: flex;
-  flex-direction: column;
-  text-align: left;
-}
-}
+  
+   
+
+    
+   
+  
+    
+
+
 
 
 
