--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,8 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
+@import url(//db.onlinewebfonts.com/c/0a2bda6a452a0e2e10770717bac25392?family=AgudaBlackUnicaseW01-Rg);
+
 
 :root {
   --Sniglet-font: "Sniglet", cursive;
@@ -16,12 +18,15 @@
   --Montserrat: 'Montserrat', sans-serif;
   --DM-Serif: 'DM Serif Display', serif;
   --Raleway: 'Raleway', sans-serif;
+  --Gilroy: 'Gilroy', sans-serif;
+  --AgudaBlackUnicase: 'AgudaBlackUnicaseW01-Rg';
   // --main-bg: #131314;
   --hero-section-color-one: #323232;
   --hero-section-color-two: #222226;
   --text-color: #ccad78;
   --white: #FFFFFF;
   --card-bg: #1E1E1E;
+
 
 }
 html {
@@ -37,17 +42,38 @@ body {
   overflow-x: hidden;
   margin: 0;
   padding: 0;
+  transition: all 0.2s linear;
   line-height: 1.6;
+  // color: white;
+}
+
+body.dark {
+ background-color: #0c0c0c;
+ color: white;
+}
+
+body.light {
+// background-color:#6552fffa;
+background-color: #D3D4EB;
+background-image: url("https://images.pexels.com/photos/19670/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+background-size: cover;
+}
+
+body.light .weather-section .weather-card,
+body.light .card-shadow::before {
+  // background-color: #ffffff;
+  color: #000000;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
+  padding: 0;box-shadow: 0;
 }
 
 
-    // background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
-    // backdrop-filter: blur(10px);
-    // box-shadow: 0 10px 32px 0 rgb(0 0 0 / 40%);
+// background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+// backdrop-filter: blur(10px);
+// box-shadow: 0 10px 32px 0 rgb(0 0 0 / 40%);
