--- a/src/component/Header.scss
+++ b/src/component/Header.scss
@@ -65,15 +65,16 @@
         }
 
                  .search-icon {
-                     height: 30px;
-                     width: 30px;
-                     float: left;
+                     height: 25px;
+                     width: 25px;
+                     float: right;
                      display: flex;
-                     justify-content: center;
+                     justify-content: flex-end;
                      align-items: center;
                      border-radius: 50%;
                      color: white;
-                     margin-right: .7rem;
+                     margin-right: 1.5rem;
+                     margin-left: 1rem;
                      cursor: pointer;
                      text-decoration: none;
                  }
