--- a/src/index.scss
+++ b/src/index.scss
@@ -60,7 +60,7 @@ background-size: cover;
 }
 
 body.light .weather-section .weather-card,
-body.light .card-shadow::before {
+body.light .forecast-card::before {
   // background-color: #ffffff;
   color: #000000;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
