--- a/src/component/Header.scss
+++ b/src/component/Header.scss
@@ -59,7 +59,7 @@
         border: 0;
         outline: 0;
         background: none;
-        caret-color: transparent;
+        // caret-color: transparent;
         line-height: 40px;
         transition: width 0.4s linear;
         }
