--- a/src/component/Header/Header.scss
+++ b/src/component/Header/Header.scss
@@ -49,7 +49,7 @@
             display: flex;
             align-items: center;
             height: 50px;
-          background-color: #1E1E1E;
+          background-color: #383838;
             border-radius: 30px;
             padding: 10px;
             width: 400px;
