--- a/src/component/Weather/Weather.scss
+++ b/src/component/Weather/Weather.scss
@@ -13,7 +13,7 @@
   // background-color: #101014;
 
   .time-date {
-    color: var(--white);
+    // color: var(--white);
     text-align: center;
 
     .time {
@@ -147,7 +147,7 @@
   }
   .card-body {
     padding: 1rem;
-    color: white;
+    // color: white;
     display: flex;
     flex-direction: column;
     justify-content: center; /* vertically center the text */
@@ -190,7 +190,7 @@
       font-family: var(--Gilroy);
       letter-spacing: 0.9px;
       font-weight: 400;
-      color: white;
+      // color: white;
     }
 
     .wind-speed {
@@ -306,7 +306,7 @@
         font-family: var(--Gilroy);
         letter-spacing: 0.9px;
         font-weight: 400;
-        color: white;
+        // color: white;
       }
   
       .wind-speed {
