--- a/src/component/Header/Header.scss
+++ b/src/component/Header/Header.scss
@@ -53,7 +53,10 @@
             border-radius: 30px;
             padding: 10px;
             width: 400px;
-
+            input[type=text]::placeholder{
+              color: white;
+              opacity: 0.5;
+              }
     .search-input{
         color: white;
         border: 0;
