--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
 background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
     backdrop-filter: blur(10px);
     box-shadow: 0 10px 32px 0 rgba(0, 0, 0,  40%);
-    min-width: 900px;
+    // min-width: 900px;
 border-radius: 20px;
 padding: 2rem 5rem 5rem 5rem;
 overflow: hidden;
