--- a/src/component/Header/Header.scss
+++ b/src/component/Header/Header.scss
@@ -1,170 +1,196 @@
 // /*-------------------------------------HEADER-----------------*/
-
 .header-wrap {
-    position: relative;
-    z-index: 4;
-    background: transparent;
+  position: relative;
+  z-index: 4;
+  background: transparent;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 0 1%;
+
+ 
+    @media only screen and (max-width: 767px) {
+        padding: 0 2%;
+    }    
+    .fl {
+    flex: 1;
+  }
+ 
+  .location-area {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    width: 100%;
-   
+// @media only screen and (max-width: 767px) {
+//     display: none;
 
+//   }
+    .logo-img {
+      img {
+        width: 50px;
+        margin-right: 1rem;
+        @media only screen and (max-width: 767px) {
+          width: 45px;
+          margin-left: 1rem;
+          margin-left: 1rem;     
+         }
+     }
+    }
 
-
-
-    .location-area {
+    .location-header{
       display: flex;
       align-items: center;
-     
-      .logo-img {
-        img {
-          width: 50px;
-          margin-right: 1rem;
+      @media only screen and (max-width: 767px) {
+        display: none;
+        } 
+    }
+
+    .location-top {
+      font-family: var(--Gilroy);
+      font-weight: 600;
+      letter-spacing: 0.7px;
+      margin-left: 0.5rem;
+
+      span {
+        font-family: var(--Gilroy);
+        font-weight: 400;
+      }
+    }
+  }
+  .search-box {
+    margin-bottom: auto;
+    margin-top: auto;
+    display: flex;
+    align-items: center;
+    height: 50px;
+    background-color: #383838;
+    border-radius: 30px;
+    padding: 10px;
+    width: 360px;
+    @media only screen and (max-width: 767px) {
+      position: absolute;
+      left: 0px;
+      right: 0px;
+      width: 300px;
+      top: 70px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    
+    input[type="text"]::placeholder {
+      color: white;
+      opacity: 0.5;
+    }
+    .search-input {
+      color: white;
+      border: 0;
+      outline: 0;
+      background: none;
+      line-height: 40px;
+      transition: width 0.4s linear;
+      background-color: transparent;
+      transition: transform 250ms ease-in-out;
+    }
+
+    .search-icon {
+      height: 25px;
+      width: 25px;
+      float: right;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      border-radius: 50%;
+      color: white;
+      margin-right: 1.5rem;
+      margin-left: 1rem;
+      cursor: pointer;
+      text-decoration: none;
+    }
+  }
+
+  .right-side-values {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    .weather-temp {
+      display: flex;
+      align-items: center;
+
+      .circle {
+        width: 35px;
+        height: 35px;
+        background-color: white;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 0.5rem;
+        color: black;
+        font-family: var(--Montserrat);
+        font-weight: 600;
+        font-size: 1.5rem;
+        cursor: pointer;
+
+        &.active {
+          background: linear-gradient(
+            135deg,
+            rgba(255, 255, 255, 0.1),
+            rgba(255, 255, 255, 0)
+          );
+          // backdrop-filter: blur(10px);
+          color: var(--white);
+          box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         }
       }
-        .location-top{
-          font-family: var(--Gilroy);
-          font-weight: 600;
-          letter-spacing: .7px;
-          margin-left: .5rem;
+    }
+    .form-check {
+      position: relative;
 
-          span {
-              font-family: var(--Gilroy);
-              font-weight: 400;
+      .form-check-input {
+        display: none;
+
+        &:checked {
+          + .form-check-label::after {
+            transform: translateX(28px);
           }
-
-        
         }
-                   
-    }
-        .search-box{
-            margin-bottom: auto;
-            margin-top: auto;
-            display: flex;
-            align-items: center;
-            height: 50px;
-            background-color: #383838;
-            border-radius: 30px;
-            padding: 10px;
-            width: 360px;
-            input[type=text]::placeholder{
-              color: white;
-              opacity: 0.5;
-              }
-    .search-input{
-        color: white;
-        border: 0;
-        outline: 0;
-        background: none;
-        line-height: 40px;
-        transition: width 0.4s linear;
-        background-color: transparent;
-        transition: transform 250ms ease-in-out;
-        }
+      }
 
-      .search-icon {
-        height: 25px;
-        width: 25px;
-        float: right;
+      .form-check-label {
         display: flex;
-        justify-content: flex-end;
+        justify-content: space-between;
         align-items: center;
-        border-radius: 50%;
+        background: linear-gradient(
+          135deg,
+          rgba(73, 73, 73, 0.952),
+          rgb(26, 26, 26)
+        );
+        // box-shadow: 0 10px 32px 0 rgba(18, 18, 18, 0.5);
+        padding: 5px;
+        border-radius: 50px;
         color: white;
-        margin-right: 1.5rem;
-        margin-left: 1rem;
-        cursor: pointer;
-        text-decoration: none;
-     }  
+        width: 65px;
+        height: 35px;
+
+        &::after {
+          height: 25px;
+          width: 25px;
+          content: "";
+          position: absolute;
+          border-radius: 100%;
+          background-color: white;
+          transition: all 0.3s ease;
+        }
+
+        .sun {
+          color: orange;
+          font-size: 2.5rem;
+        }
+
+        .moon {
+          color: orange;
+          font-size: 2.5rem;
+        }
+      }
     }
-
-         .right-side-values {
-            display: flex;
-            align-items: center;
-           .weather-temp {
-                   display: flex;
-                   align-items: center;
-        
-                   .circle {
-                     width: 35px;
-                     height: 35px;
-                     background-color: white;
-                     border-radius: 50%;
-                     display: flex;
-                     align-items: center;
-                     justify-content: center;
-                     margin: 0 0.5rem;
-                     color: black;
-                     font-family: var(--Montserrat);
-                     font-weight: 600;
-                     font-size: 1.5rem;
-                     cursor: pointer;
-        
-                     &.active {
-                       background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
-                       // backdrop-filter: blur(10px);
-                       color: var(--white);
-                       box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-                     }
-                   }
-        
-                 }
-          .form-check {
-                       position: relative;
-
-                    .form-check-input {
-                            display: none;
-
-                            &:checked {
-                            +.form-check-label::after {
-                                  transform: translateX(28px);
-                              }
-                            }
-                     }
-                    
-
-                    .form-check-label {
-                       display: flex;
-                       justify-content: space-between;
-                       align-items: center;
-                      background: linear-gradient(135deg, rgba(73, 73, 73, 0.952), rgb(26, 26, 26));
-                        // box-shadow: 0 10px 32px 0 rgba(18, 18, 18, 0.5);
-                       padding: 5px;
-                       border-radius: 50px;
-                       color: white;
-                       width: 65px;
-                       height: 35px;
-
-                    &::after {
-                       height: 25px;
-                       width: 25px;
-                       content: "";
-                       position: absolute;
-                       border-radius: 100%;
-                       background-color: white;
-                       transition: all 0.3s ease;
-                       }
-
-                     .sun {
-                       color: orange;
-                       font-size: 2.5rem;
-                     }
-
-                     .moon {
-                        color: orange;
-                        font-size: 2.5rem;
-                     }
-         
-             }
-                       
-         }
-
-         }
-
-                
+  }
 }
-
-
-
-
