--- a/src/component/Weather/Weather.scss
+++ b/src/component/Weather/Weather.scss
@@ -12,22 +12,22 @@
   padding: 30px 0px 10px 0px;
   // background-color: #101014;
  
-   @media only screen and (max-width: 767px) {
-    padding: 10px 0px 10px 0px;
-    
-   }
+
 
   .time-date {
     // color: var(--white);
     text-align: center;
    margin-bottom: 2rem;
+   @media only screen and (max-width: 767px) {
+    margin-top: 40px;
+    } 
 
     .time {
       font-size: 9rem;
       font-family: var(--AgudaBlackUnicase);
       @media only screen and (max-width: 575px) {
       
-        font-size: 6rem;
+        font-size: 5rem;
         
        }
     }
@@ -40,6 +40,17 @@
   }
 
   .weather-location-top {
+    @media only screen and (max-width: 575px) {
+      width:350px;
+      max-width:100%;
+      margin:0 auto;
+      
+     }
+     @media only screen and (max-width: 360px) {
+      width:300px;
+     
+      
+     }
     .loc {
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
@@ -64,6 +75,7 @@
           }
         }
       }
+      
   }
 
   .weather-card {
@@ -78,10 +90,22 @@
     border-top-left-radius: 0px;
      border-top-right-radius: 0px;
      width: 100%;
+     max-width: 100%;
+
+     @media only screen and (max-width: 575px) {
+      width:350px;
+      margin:0 auto;
+      
+     }
+     @media only screen and (max-width: 360px) {
+      width:300px;
+     
+      
+     }
+     
 
     // @media only screen and (max-width: 575px) {
     //   width: 300px;
-      
     //  }
 
     .weather-card-body {
@@ -89,8 +113,16 @@
         align-items: center;
         justify-content: space-between;
         width: 100%;
-        padding: .4rem 5rem 1rem 5rem;
         height: 250px;
+        padding: .4rem 4rem 1rem 4rem;
+
+        @media only screen and (max-width: 990px) {
+            padding: .4rem 3rem 1rem 3rem;
+          }
+
+        @media only screen and (max-width: 575px) {
+              padding: .4rem 2rem 1rem 4rem;
+          }
 
         .weather-deg-info {
           .deg {
@@ -98,6 +130,13 @@
               text-align: center;
               margin-bottom: 0;
               font-family: var(--AgudaBlackUnicase);
+              @media only screen and (max-width: 990px) {
+                font-size: 5rem;
+               }
+              @media only screen and (max-width: 575px) {
+               font-size:4.5rem
+                
+               }
             }
 
             .weather-main-status{
@@ -105,6 +144,10 @@
                 font-family: var(--Gilroy);
                 letter-spacing: 0.7px;
                 font-weight: 550;
+                @media only screen and (max-width: 575px) {
+                  font-size: 1.5rem;
+                  
+                 }
             }
           
             .info {
@@ -112,12 +155,21 @@
               font-family: var(--Gilroy);
               letter-spacing: 0.7px;
               font-weight: 300;
+              @media only screen and (max-width: 575px) {
+                
+                font-size: 1.2rem;
+                
+               }
             }
             .real-feel {
                   font-size: 1.4rem;
                   font-family: var(--Gilroy);
                   letter-spacing: 0.7px;
                   font-weight: 300;
+                  @media only screen and (max-width: 575px) {
+                    font-size: 1.2rem;
+                    
+                   }
               .value {
                 font-size: 1.6rem;
                   font-family: var(--Gilroy);
@@ -129,7 +181,18 @@
 
          .head-icon-img {
           .icon-img {
-            width: 225px;
+            width: 200px;
+            @media only screen and (max-width: 990px) {
+              width:165px;
+            }
+
+           @media only screen and (max-width: 767px) {
+              width: 200px;
+            }
+
+            @media only screen and (max-width: 575px) {
+              width:130px;
+             }
           }
         }
     }
