--- a/src/component/Header/Header.scss
+++ b/src/component/Header/Header.scss
@@ -50,6 +50,10 @@
       letter-spacing: 0.7px;
       margin-left: 0.5rem;
 
+        @media only screen and (max-width: 990px) {
+             font-size: 1.3rem;
+          }
+
       span {
         font-family: var(--Gilroy);
         font-weight: 400;
@@ -151,6 +155,7 @@
         &:checked {
           + .form-check-label::after {
             transform: translateX(28px);
+
           }
         }
       }
@@ -175,6 +180,7 @@
           height: 25px;
           width: 25px;
           content: "";
+              left: 30px;
           position: absolute;
           border-radius: 100%;
           background-color: white;
