--- a/src/component/Weather/Weather.scss
+++ b/src/component/Weather/Weather.scss
@@ -24,7 +24,8 @@
 
     .time {
       font-size: 9rem;
-      font-family: var(--AgudaBlackUnicase);
+      // font-family: var(--AgudaBlackUnicase);
+      font-family: "AgudaBlackUnicaseW01-Rg";
       @media only screen and (max-width: 575px) {
       
         font-size: 5rem;
@@ -129,7 +130,7 @@
               font-size: 6rem;
               text-align: center;
               margin-bottom: 0;
-              font-family: var(--AgudaBlackUnicase);
+              font-family: "AgudaBlackUnicaseW01-Rg";
               @media only screen and (max-width: 990px) {
                 font-size: 5rem;
                }
@@ -267,7 +268,7 @@
       font-weight: 500;
     }
     .deg-feel {
-      font-family: var(--AgudaBlackUnicase);
+    font-family: "AgudaBlackUnicaseW01-Rg";
       letter-spacing: 1.5px;
       font-size: 2.5rem;
       margin-left: 0.5rem;
@@ -380,7 +381,7 @@
       }
   
       .deg-feel {
-        font-family: var(--AgudaBlackUnicase);
+        font-family: "AgudaBlackUnicaseW01-Rg";
         letter-spacing: 1.5px;
         font-size: 2rem;
         margin-left: 1rem;
