--- a/src/component/Header/Header.scss
+++ b/src/component/Header/Header.scss
@@ -77,6 +77,10 @@
       top: 70px;
       margin-left: auto;
       margin-right: auto;
+      width: 100%;
+      max-width: 100%;
+
+     
     }
     
     input[type="text"]::placeholder {
@@ -194,6 +198,19 @@
           font-size: 2.5rem;
         }
       }
+    }
+  }
+ @media only screen and (max-width: 767px) {
+    .Toastify__toast {
+      color: #444C63;
+      font-size: 16px;
+      padding-left: 20px;
+      line-height: 20px;
+      padding: 0px;
+      /* padding-top: 25px; */
+      width: 300px;
+      font-weight: 400;
+      margin-left: 25px !important;
     }
   }
 }
